# fit-bpc-prp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  cliff.toml  dev.sh  env-setup.sh  fastdds_peer.xml  package.xml  run.sh
.devcontainer/: Dockerfile  devcontainer.json  ros_entrypoint.sh  ros_env.sh
.github/workflows/: main.yml
config/: ekf.yaml  fastdds_profiles.xml
include/: App.h  App.hpp  CMakeLists.txt  Controller.hpp  Kinematics.hpp  Line.hpp  LineEstimator.hpp  MotorController.hpp  OccupancyGrid.hpp  Pid.hpp  Point.hpp  PoseMatcher.hpp  SplinePath.hpp  Vector2.hpp  example.hpp  kinematics.hpp
include/Common/: EventBus.hpp  RosComponent.hpp  RosConnector.hpp  RosDeviceDriver.hpp  RosEngine.hpp
include/Components/: ExplorerEngine.hpp  FollowerEngine.hpp  ImuDriver.hpp  LidarDriver.hpp  LineEngine.hpp  MappingEngine.hpp  MotorDriver.hpp  NavigatorEngine.hpp  NavigatorGraphBuilder.hpp  OdometryEngine.hpp  UserInputDriver.hpp
include/Controllers/: BaseController.h  ExplorerController.hpp  FollowerController.hpp  ImuComponent.hpp  ImuDriver.hpp  KeyboardController.h  LidarController.hpp  LidarDriver.hpp  LidarFilter.hpp  LineController.hpp  MapController.hpp  MappingEngine.hpp  MotorDriver.hpp  NavigatorController.hpp  OdometryEngine.hpp  SlamController.hpp  UserInputController.hpp
include/Controllers/Node/: LineController.h  LineController.hpp  MotorController.h  MotorController.hpp  NodeController.h  NodeController.hpp  RobotOdometry.hpp
include/Math/: Pose.hpp  PoseMatcher.hpp  Vector2.hpp
include/Networking/: CommandParser.hpp  TcpServer.h
launch/: bringup.launch.py
projects/: CMakeLists.txt
projects/burny/: CMakeLists.txt
scripts/: analyze_motor_log.py
src/: App.cpp  CMakeLists.txt  Kinematics.cpp  LineEstimator.cpp  MotorController.cpp  main.cpp
src/Components/: RosComponent.cpp
src/Components/Drivers/: ImuDriver.cpp  LidarDriver.cpp  MotorDriver.cpp  UserInputDriver.cpp
src/Components/Engines/: ExplorerEngine.cpp  FollowerEngine.cpp  LineEngine.cpp  MappingEngine.cpp  NavigatorEngine.cpp  NavigatorGraphBuilder.cpp  OdometryEngine.cpp
src/Controllers/: BaseController.cpp  ExplorerController.cpp  FollowerController.cpp  ImuComponent.cpp  ImuDriver.cpp  KeyboardController.cpp  LidarController.cpp  LidarDriver.cpp  MapController.cpp  MappingEngine.cpp  NavigatorController.cpp  NavigatorGraphBuilder.cpp  RosConnector.cpp  SlamController.cpp  UserInputController.cpp
src/Controllers/Node/: LineController.cpp  MotorController.cpp  MotorDriver.cpp  NodeController.cpp  OdometryEngine.cpp  RobotOdometry.cpp
src/Networking/: TcpServer.cpp
tests/: CMakeLists.txt  t_kinematics.cpp  t_line_estimation.cpp
